tests/snapshots/docx/pandoc/table_one_header_row.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableHeader { abbr: None, colspan: None, id: None, rowspan: None, scope: Some(Column) },
    StartParagraph { alignment: None, id: None },
    Text { content: "One" },
    EndParagraph,
    EndTableHeader,
    StartTableHeader { abbr: None, colspan: None, id: None, rowspan: None, scope: Some(Column) },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row" },
    EndParagraph,
    EndTableHeader,
    StartTableHeader { abbr: None, colspan: None, id: None, rowspan: None, scope: Some(Column) },
    StartParagraph { alignment: None, id: None },
    Text { content: "Table" },
    EndParagraph,
    EndTableHeader,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
