tests/snapshots/docx/pandoc/table_one_row.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "One" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Table" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
