tests/snapshots/docx/pandoc/table_with_list_cell.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell with text" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell with text" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell with" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "A " },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Bullet list" },
    EndParagraph,
    EndUnorderedListItem,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartOrderedListItem { id: Some("2"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell with" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "A" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Numbered list." },
    EndParagraph,
    EndOrderedListItem,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
