tests/snapshots/docx/pandoc/tabs.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Some text separated" }
       3: Text { content: "\t" }
       4: Text { content: "by a tab." }
       5: EndParagraph
       6: StartParagraph { alignment: None, id: None }
       7: Text { content: "\t" }
       8: Text { content: "Tab-indented text." }
       9: EndParagraph
      10: EndDocument
  ],
  terminal: Ok,
}
