tests/snapshots/docx/pandoc/task_list.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartUnorderedListItem { id: Some("1001"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Unchecked" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1002"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Checked" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1000"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "with continuation paragraph" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1003"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Unchecked" },
    EndParagraph,
    StartUnorderedListItem { id: Some("1004"), level: 1, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Checked sublist" },
    EndParagraph,
    StartUnorderedListItem { id: Some("1005"), level: 2, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Unchecked subsublist" },
    EndParagraph,
    StartOrderedListItem { id: Some("1006"), level: 3, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Numbered child" },
    EndParagraph,
    EndOrderedListItem,
    EndUnorderedListItem,
    EndUnorderedListItem,
    EndUnorderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
