tests/snapshots/docx/pandoc/text_in_shape_format.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: Some(Left), id: None }
       2: EndParagraph
       3: StartParagraph { alignment: Some(Left), id: None }
       4: EndParagraph
       5: EndDocument
  ],
  terminal: Ok,
}
