tests/snapshots/docx/pandoc/track_changes_deletion.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a text with a" },
    Text { content: " deletion." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
