tests/snapshots/docx/pandoc/track_changes_insertion.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a text with " },
    Text { content: "two exciting " },
    Text { content: "insertions." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
