tests/snapshots/docx/pandoc/track_changes_scrubbed_metadata.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Here is a " }
       3: Text { content: "test" }
       4: Text { content: " " }
       5: Text { content: "document" }
       6: Text { content: "." }
       7: EndParagraph
       8: EndDocument
  ],
  terminal: Ok,
}
